test/spec_vectors/i32/fail/module_64.wat
(module (func (result i32) (i32.rotr (i64.const 0) (f32.const 0))))